Crash when rendering multiple view layers #108778

Closed
opened 2023-06-08 21:36:00 +02:00 by Jacques Lucke · 2 comments
Member

System Information
Operating system: Linux-6.2.13-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: AMD Radeon RX 5700 (navi10, LLVM 15.0.7, DRM 3.49, 6.2.13-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 23.0.3

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, hash: 47ce7bbecc57bf5a6e648d18db035d2ee78f43e7

Short description of error
Rendering pets/pro/shots/010_intro/010_0060/010_0060.lighting.blend from the Blender Studio production results in a crash during geometry nodes evaluation (in most cases).

Exact steps for others to reproduce the error

  1. Make sure you have the repository checked out (only for people at Blender).
  2. Open pets/pro/shots/010_intro/010_0060/010_0060.lighting.blend.
  3. Render single frame.
  4. Crash when rendering the Background enabled view layer.

The crash happens while evaluating the modifier on the LGT-shadow_proxy object. In the node tree, the CH-dog collection is realized. It seems like some objects in the collection are uninitialized in the depsgraph.

My initial investigation suggests that this is caused by reusing the same depsgraph for rendering different view layers somehow. When I change engine_depsgraph_init to always call engine_depsgraph_free instead of ever using DEG_graph_replace_owners, the crash does not happen for me.

I also was not able to reproduce the crash when rendering view layers individually.

Maybe someone has an idea for what could be different in a newly created depsgraph vs. one that was updated from another view layer.

**System Information** Operating system: Linux-6.2.13-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: AMD Radeon RX 5700 (navi10, LLVM 15.0.7, DRM 3.49, 6.2.13-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 23.0.3 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, hash: `47ce7bbecc57bf5a6e648d18db035d2ee78f43e7` **Short description of error** Rendering `pets/pro/shots/010_intro/010_0060/010_0060.lighting.blend` from the Blender Studio production results in a crash during geometry nodes evaluation (in most cases). **Exact steps for others to reproduce the error** 1. Make sure you have the repository checked out (only for people at Blender). 2. Open `pets/pro/shots/010_intro/010_0060/010_0060.lighting.blend`. 3. Render single frame. 4. Crash when rendering the Background enabled view layer. The crash happens while evaluating the modifier on the `LGT-shadow_proxy` object. In the node tree, the `CH-dog` collection is realized. It seems like some objects in the collection are uninitialized in the depsgraph. My initial investigation suggests that this is caused by reusing the same depsgraph for rendering different view layers somehow. When I change `engine_depsgraph_init` to always call `engine_depsgraph_free` instead of ever using `DEG_graph_replace_owners`, the crash does not happen for me. I also was not able to reproduce the crash when rendering view layers individually. Maybe someone has an idea for what could be different in a newly created depsgraph vs. one that was updated from another view layer.
Jacques Lucke added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-06-08 21:36:00 +02:00

I see only 010_0060.anim.blend file, so can't check. The files I have should be up to date.

I see only `010_0060.anim.blend` file, so can't check. The files I have should be up to date.
Author
Member

Hm, I have the anim and lighting file. Seems like your svn checkout either is not complete or up to date.

Hm, I have the `anim` and `lighting` file. Seems like your svn checkout either is not complete or up to date.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-06-09 18:42:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108778
No description provided.